Fix for wrong height on social-links div element
Added a display: block to the social-links css style block. This seems
to fix the sometimes wrongly reported height from this element.

--- a/stylesheets/venekamp-blog.css
+++ b/stylesheets/venekamp-blog.css
@@ -106,7 +106,9 @@ h3 .post-title {
 }
 */
 #social-links {
+    display: block;
     width: 60px;
+    height: auto;
     position: fixed;
     bottom: 0px;
     right: 1em;
